Adding mobile-flex

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,3 +177,46 @@ display: flex;
 #content p:nth-child(3){flex:1 1 0}
 #content p:nth-child(4){flex:1 1 0}
 #content p:nth-child(5){flex:1 1 0}
+
+
+/***********************************************************
+				        Mobile flexbox 
+***********************************************************/
+
+.mobile-header{
+	background-color: grey;
+/* vw = viewport width, vh = viewport height */
+	width:100vw;
+	height:100vh;
+	display:flex;
+	flex-direction:column;
+}
+
+.mobile-header div{
+	/* ignore the content (flex-basis:0) and make sure each takes up an equal amount of space across the column (flex-grow:1)  */
+flex-basis: 0;
+flex-grow: 1;
+
+/* fix the image so it doesnt repeat and always covers the whole box */
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center;
+
+/* use flexbox to center the text horizontally and vertically */
+display:flex;
+justify-content: center;
+align-items: center;
+
+}
+
+/* ../ means go up one folder, as we need to get from CSS file to the imaage file */
+.mobile-header div:nth-child(1){background-image:url("../images/pancake-batfish.jpg");}
+.mobile-header div:nth-child(2){background-image:url("../images/blobfish.jpg");}
+.mobile-header div:nth-child(3){background-image:url("../images/barreleye-fish.jpg");}
+
+.mobile-header div span{
+	color: white;
+	font-weight:bold;
+	font-size:2rem;
+
+}
